# workout-maths

./: .gitignore  CLAUDE.md  DESIGN.md  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile.local  pyproject.toml  railway.json
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_animal_type_to_users.py  f33c0914d9bc_add_users_and_quiz_tables.py
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: quiz.py  user.py
backend/app/routers/: admin.py  auth.py  health.py  leaderboard.py  quiz.py  users.py
backend/app/schemas/: admin.py  auth.py  quiz.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_health.py  test_leaderboard.py  test_quiz.py  test_scoring.py  test_users.py
docker/: init-test-db.sql
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  railway.json  vitest.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/profile/: page.tsx
frontend/src/app/(app)/quiz/: page.tsx
frontend/src/app/(app)/quiz/results/: page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/signup/: page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/login/: page.tsx
frontend/src/lib/: api.ts  auth.ts  quiz.ts  sounds.ts
frontend/src/lib/__tests__/: auth.test.ts  quiz.test.ts
